--- a/css/style.css
+++ b/css/style.css
@@ -27,15 +27,21 @@ reset
 .post-title {
     margin: 0 auto;
     margin-bottom: 40px;
+    
 }
-.container{
-    width: 300px;
-    height: 100px;
-    display: inline-block;
-    background-color: black;
+
+.clearfix::after {
     content:"";
     display: table;
     clear: both;
+}
+
+.card{
+    border-radius: 10px;
+    height: 100px;
+    background-color: black;
+    float: left;
+    margin: 15px;
 
 }
 
@@ -52,11 +58,13 @@ img{
     display: inline-block;
     color: white;   
     padding: 5%;
-    
-    
+    font-size: 10pt;
+
 }
 
-
+a {
+    color:#4493BC;
+}
 
 
 
